prusti-tests/tests/parse/ui/exists_fail.stderr
error: expected parenthesized expression after quantifier
 --> $DIR/exists_fail.rs:9:12
  |
9 | #[requires(exists)]
  |            ^^^^^^

error: expected quantifier body
  --> $DIR/exists_fail.rs:12:12
   |
12 | #[requires(exists())]
   |            ^^^^^^

error: expected quantifier body
  --> $DIR/exists_fail.rs:15:12
   |
15 | #[requires(exists(|))]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/exists_fail.rs:18:12
   |
18 | #[requires(exists(||) 1+1)]
   |            ^^^^^^

error: quantifier arguments must have explicit types
  --> $DIR/exists_fail.rs:21:20
   |
21 | #[requires(exists(|a, b| true))]
   |                    ^

error: a quantifier must have at least one argument
  --> $DIR/exists_fail.rs:24:12
   |
24 | #[requires(exists(||) || exists(||))]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/exists_fail.rs:27:12
   |
27 | #[requires(exists(|| 1+1 == 1+1, triggers=[(1,)]))]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/exists_fail.rs:30:12
   |
30 | #[requires(exists(|| true, triggers=[(1,2), (1,)]))]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/exists_fail.rs:33:12
   |
33 | #[requires(exists(|| true, triggers=1))]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/exists_fail.rs:36:12
   |
36 | #[requires(exists(||))]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/exists_fail.rs:39:12
   |
39 | #[requires(exists(|| 1+1 == 1+1))]
   |            ^^^^^^

error: expected quantifier body
  --> $DIR/exists_fail.rs:42:12
   |
42 | #[requires(exists(||, triggers=[]))]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/exists_fail.rs:45:12
   |
45 | #[requires(exists(|| 1+1 == 1+1, triggers=[(1,)]))]
   |            ^^^^^^

error: trigger sets must be tuples of expressions
  --> $DIR/exists_fail.rs:48:43
   |
48 | #[requires(exists(|a: i32| true, triggers=[1]))]
   |                                           ^^^

error: trigger sets must be tuples of expressions
  --> $DIR/exists_fail.rs:51:43
   |
51 | #[requires(exists(|a: i32| true, triggers=[(1, 2), 1,]))]
   |                                           ^^^^^^^^^^^^

error: aborting due to 15 previous errors

